@@ -1,3 +1,10 @@
+Sat Feb 20 04:59:15 1999  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* users.c (trivfs_S_io_revoke): Release global_lock before
+	beginning the iteration.
+	
+	* users.c (trivfs_S_io_revoke): Add reply, reply_type args.
+
 1999-02-06  Mark Kettenis  <kettenis@gnu.org>
 
 	* main.c (main): Initialize status from underlying node.
